[自動同步] 更新檔案: B1.服務計畫及跨專業服務指標-01作業手冊.md

--- a/B1.服務計畫及跨專業服務指標-01作業手冊.md
+++ b/B1.服務計畫及跨專業服務指標-01作業手冊.md
@@ -47,7 +47,7 @@ H-406-05 (優化版)
 需求發現與通報：第一線人員發現符合前條之事由，立即通報專業人力。
 照會提出：專業人力填寫**「專業整合照護照會單」**，送交被照會之專業人員。
 專業回覆：被照會之專業人員應於 5個工作天內 完成評估並回覆(如有兼任或特約人員支援報備問題，則依據各機構需求進行彈性調整)。
-計畫修訂：專業人力依據回覆，修訂個別化照顧計畫(IICP)，並告知家屬及照顧團隊。
+計畫修訂：專業人力依據回覆，修訂個別化照顧計畫，並告知家屬及照顧團隊。
 服務執行與追蹤：照服團隊依新計畫提供服務，並由個案管理員持續追蹤成效。
 第六條 跨專業個案研討會議
 會議頻率：每三個月至少召開一次，由個案管理員負責召集。
@@ -98,9 +98,9 @@ H-406-05 (優化版)
 [關係]
 慣用語言
 □國語 □台語 □客語 □其他：
+
 教育程度
 □不識字 □小學 □國中 □高中職 □大專以上
-
 
 過去職業
 
@@ -361,6 +361,7 @@ ____年____月____日 至 ____年____月____日
 個案初期對白開水排斥，經嘗試加入不同風味(如：決明子、蜂蜜)後，接受度顯著提升，近一個月每日飲水量均達1500ml。
 結案，轉為常規性提醒即可。
 其他
+
 
 
 
