[自動同步] 更新檔案: B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md

--- a/B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md
+++ b/B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md
@@ -23,7 +23,7 @@
 確保食材採購、儲存、製備過程符合食品安全衛生規範。
 4. 作業流程
 (一) 新入住個案營養評估
-初步評估：長輩入住三日內，由專業人力完成「個案營養暨膳食評估表」（附件一），內容應包含：
+初步評估：長輩入住三日內，由專業人力或兼任營養師完成個案需求評估，內容應包含：
 咀嚼與吞嚥能力。
 過敏史與特殊疾病飲食禁忌。
 飲食習慣、偏好及文化禁忌。
@@ -44,5 +44,4 @@
 定期再評估：專業人力應至少每三個月，或於長輩健康狀況有重大變化時，重新進行營養評估。
 計畫修正：根據再評估結果及日常觀察紀錄，滾動式修正「個別化照顧計畫」，並通知相關工作人員。
 5. 附件
-(一) 個案營養暨膳食評估表
-(二) 個案進食狀況觀察紀錄表
+(一)  每日照顧服務紀錄
