[自動同步] 更新檔案: B5.意外事件、緊急事件處理與預防-01操作手冊.md

--- a/B5.意外事件、緊急事件處理與預防-01操作手冊.md
+++ b/B5.意外事件、緊急事件處理與預防-01操作手冊.md
@@ -1,12 +1,4 @@
-[機構名稱] 緊急及意外事件處理辦法及流程
-文件編號
-[機構自訂]
-版次
-1.0
-制訂日期
-[制訂日期]
-生效日期
-[生效日期]
+緊急及意外事件處理辦法及流程
 第一條：目的
 為確保本機構於發生各類緊急或意外事件時，能迅速、有效地應變，將服務對象(個案)、工作人員及機構的損害與威脅降至最低，並建立持續學習與改善的品質管理機制，特制訂本辦法。
 第二條：適用範圍
@@ -28,6 +20,7 @@
 依序通報支援 (Orderly Reporting)： 依內部通報流程，迅速且正確地向上級及相關單位通報，尋求必要支援。
 完整詳實紀錄 (Complete Documentation)： 事件處理告一段落後，須依規定詳實填寫「緊急及意外事件紀錄單」。
 品質改善學習 (Quality Improvement)： 所有事件皆視為機構品質改善的機會，須進行根本原因分析，並納入年度品質改善計畫。
+
 第六條：緊急事件標準處理流程 (Master Flow)
 步驟
 流程
@@ -102,7 +95,7 @@
 定期分析： 每半年及每年，由單位主管彙整所有事件紀錄，完成「半年度/年度分析與改善報告」，分析事件類型、頻率、趨勢等數據。
 指標訂定(PDCA)： 依據年度分析結果，訂定下一週期的品質改善目標（如：跌倒率降低10%），並規劃具體的執行(Do)、查核(Check)、行動(Act)方案，納入機構年度業務計畫中執行。
 第九條：實施與修訂
-本辦法經機構負責人核准後實施，每年至少檢討修訂一次，或於重大事件發生後視需要隨時修訂。
+本辦法經機構負責人核准後實施，每年至少檢討修訂一次，或視需要隨時修訂。
 附件一：緊急通報聯絡圖
 【張貼於明顯處，並定期更新】
 最近更新日期： ____ 年 ____ 月 ____ 日
