[自動同步] 更新檔案: B4.服務對象健康檢查及健康管理-01操作手冊.md

--- a/B4.服務對象健康檢查及健康管理-01操作手冊.md
+++ b/B4.服務對象健康檢查及健康管理-01操作手冊.md
@@ -152,20 +152,35 @@ Negative
 王 O 明
 114.08.15
 114.08.20
-1. 血液：輕微貧血 (Hb: 11.5 g/dL)<br>2. 生化：飯前血糖偏高 (135 mg/dL)<br>3. 尿液：尿糖(+)、尿蛋白(+/-)<br>4. 理學：血壓偏高 (145/92 mmHg)<br>5. X光：主動脈弓鈣化，疑似動脈硬化
-1. 已於114.08.28召開跨專業會議，決議調整ISP。<br>2. **ISP修訂：**新增「血糖監測與飲食控制」、「血壓監測與生活型態調整」之照顧目標。<br>3. 已開立追蹤回條請家屬陪同回診新陳代謝科。<br>4. 衛教：已向個案及家屬衛教糖尿病、高血壓飲食原則。<br>5. 相關紀錄詳見個案資料夾。
+1. 血液：輕微貧血 (Hb: 11.5 g/dL)
+2. 生化：飯前血糖偏高 (135 mg/dL)
+3. 尿液：尿糖(+)、尿蛋白(+/-)
+4. 理學：血壓偏高 (145/92 mmHg
+5. X光：主動脈弓鈣化，疑似動脈硬化
+1. 已於114.08.28召開跨專業會議，決議調整個別化照顧計畫。
+2. **個別化照顧計畫修訂：**新增「血糖監測與飲食控制」、「血壓監測與生活型態調整」之照顧目標。
+3. 已開立追蹤回條請家屬陪同回診新陳代謝科。
+4. 衛教：已向個案及家屬衛教糖尿病、高血壓飲食原則。
+5. 相關紀錄詳見個案資料夾。
 2
 林 O 珠
 114.07.01
 114.06.25
-1. 生化：總膽固醇略高 (210 mg/dL)<br>2. 尿液：無異常
-1. 護理師已衛教低膽固醇飲食原則。<br>2. **ISP修訂：**午、晚餐採去皮、少油烹調方式。<br>3. 照服員每日記錄飲食狀況，三個月後追蹤。
+1. 生化：總膽固醇略高 (210 mg/dL)
+2. 尿液：無異常
+1. 護理師已衛教低膽固醇飲食原則。
+2. **個別化照顧計畫修訂：**午、晚餐採去皮、少油烹調方式。
+3. 照服員每日記錄飲食狀況，三個月後追蹤。
 3
 陳 O 雄
 114.09.02
 114.08.28
-1. 血液：無異常<br>2. 生化：腎功能指數(BUN)略高<br>3. 尿液：無異常
-1. 護理師已衛教多喝水，避免憋尿。<br>2. 照服員協助提醒並記錄每日飲水量。<br>3. 建議家屬可至腎臟科門診諮詢。
+1. 血液：無異常
+2. 生化：腎功能指數(BUN)略高
+3. 尿液：無異常
+1. 護理師已衛教多喝水，避免憋尿。
+2. 照服員協助提醒並記錄每日飲水量。
+3. 建議家屬可至腎臟科門診諮詢。
 
 三、 健檢異常衛教照片範本
 服務對象健檢報告異常-衛教宣導紀錄
