--- a/B3.服務提供過程感染預防、處理及監測-00操作指引.md
+++ b/B3.服務提供過程感染預防、處理及監測-00操作指引.md
@@ -1,38 +1,118 @@
-社區式長照機構評鑑指標 B3 操作指引
-指標 B3：服務提供過程感染預防、處理及監測
-評鑑基準說明：
-制定感染管制手冊並每年至少審閱修訂1次、服務對象感染預防評估措施、處理辦法及流程，並確實執行，如有發生感染案件應逐案及定期(至少每半年)檢討、分析並有改善方案。
-服務對象體溫每日至少測量1次，且有紀錄。
-感染情形，皆有監測紀錄，且感染事件依規定通報處理，並有紀錄及追蹤。
-落實實施手部衛生作業。
-鼓勵服務對象與工作人員配合政策施打相關疫苗並有紀錄。
-基準一：感染管制手冊
-操作說明：
-感染管制手冊是機構感控工作的最高指導原則，也是評鑑委員檢視機構感控是否系統化的首要文件。手冊不僅要存在，更要「活用」。
-每年審閱修訂： 每年應由感控負責人召集相關人員（如：業務負責人、護理師、照服員代表）召開會議，檢視手冊內容是否符合現行法規、機構現況與新興傳染病趨勢。
-佐證資料： 會議紀錄（需有主席、出席人員簽到、會議照片、討論內容與決議），並在手冊封面或修訂頁註明最新修訂日期。
-手冊必備內容： 根據您提供的《感控手冊114.01.01.docx》，內容已相當完善。請確保手冊包含以下所有要素：
-服務對象感染預防評估措施： 新進個案的健康評估、風險因子（如管路、慢性病）評估方法。
-處理辦法及流程： 針對不同感染類型（呼吸道、腸胃道、皮膚等）的標準處理流程、隔離措施、通報流程圖。
-新興傳染病更新： 定期（如：每半年）至疾管署網站關注新興傳染病資訊，並更新至手冊中。
-監測紀錄表單： 將所有感控相關表單（如：體溫紀錄表、感染登記表）作為附錄放入手冊。
-分析與檢討機制： 明訂逐案分析與定期分析的權責人員、頻率與流程。
-通報機制： 明確的內、外部通報流程，包含對象、時限與聯絡方式。
-【範本一：感染管制手冊年度審閱修訂會議紀錄】
+永信社會福利基金會～B3.服務提供過程感染預防、處理及監測 操作指引
+第一章：指標核心要求
+本指標旨在評核機構是否建立並落實一套系統性、持續性的感染管制作業流程。評鑑委員關注的核心精神在於**「預防勝於治療，管理留下軌跡」。重點不僅是處理已發生的感染事件，更在於展現機構具備預防**（手部衛生、疫苗接種）、監測（每日體溫）、應變（處理流程）、檢討（逐案與定期分析）及持續改善（修訂辦法、提出改善方案）的完整品質管理循環（PDCA）能力。所有環節都必須有具體、詳實的書面紀錄支持。
+第二章：臺中市114年度評鑑基準
+依據官方文件，B3指標的具體要求如下：
+基準說明
+評核方式
+備註說明
+1. 制定感染管制手冊並每年至少審閱修訂1次、服務對象感染預防評估措施、處理辦法及流程，並確實執行，如有發生感染案件應逐案及定期(至少每半年)檢討、分析並有改善方案。
+2. 服務對象體溫每日至少測量1次，且有紀錄。
+3. 感染情形，皆有監測紀錄，且感染事件依規定通報處理，並有紀錄及追蹤。
+4. 落實實施手部衛生作業。
+5. 鼓勵服務對象與工作人員配合政策施打相關疫苗並有紀錄。
+文件檢閱、現場訪談
+1.檢閱感染預防評估措施、處理辦法及流程，與相關會議檢討紀錄。
+2.檢閱服務對象體溫紀錄表，是否每日量測服務對象體溫至少1次及有否異常。
+3.訪談長照人員是否熟悉通報作業流程。
+4.檢閱感染事件發生之紀錄。
+5.現場檢測長照人員(含兼職人員等所有人員)是否會正確洗手。
+6.檢視機構鼓勵服務對象與工作人員施打相關預防性疫苗之措施。
+1. 本項所稱工作人員，例如，長照人員、行政人員等。
+2. 長照人員：包括照顧服務員、醫事人員等。
+
+
+
+
+
+
+
+
+
+
+
+
+第三章：與其他指標之連貫性
+B3指標是機構安全與品質管理的核心，它與其他指標緊密相連，構成一個完整的管理體系。
+計畫輸入 (Input) - B3的基礎來自於：
+A9. 工作人員定期接受健康檢查：確保工作人員本身不是感染源，其健檢結果是B3感染風險評估的輸入項。
+A10. 新進工作人員職前訓練：感染管制（特別是洗手技巧）應為職前訓練的必備課程，確保人員具備基礎感控知能。
+B4. 服務對象健康檢查及健康管理：新進服務對象的體檢報告（特別是傳染病項目）是B3制定個別化預防措施的依據。
+計畫內容 (Content) - B3的執行過程與以下指標相互關聯：
+B5. 意外事件、緊急事件處理與預防：大規模的感染或群聚事件，本身就是一項緊急事件，其通報與應變流程需與B5的辦法相結合。
+C3. 廚房及用餐環境、清潔衛生 & C5. 餐飲衛生：腸胃道感染的預防，與廚房的清潔、食物檢體留存等措施息息相關。
+C10. 機構環境清潔及病媒防治措施：環境的定期清消是B3感染管制手冊中重要的一環，兩者需互相呼應。
+計畫輸出 (Output) - B3的執行成果會影響：
+A1. 業務計畫擬定與執行：B3的年度/半年度檢討分析報告中提出的「改善方案」，應被納入下一年度的業務計畫中，形成管理循環。
+B1. 服務計畫及跨專業服務：當服務對象發生感染時，其「個別化服務計畫」需立即調整，並可能需要召開跨專業會議討論照護對策。
+第四章：評鑑準備操作步驟
+步驟一：完備核心制度文件 (對應基準B3-1)
+制定與修訂《感染管制手冊》
+內容完備：《請確保手冊中已包含服務對象感染預防評估措施、各類感染處理流程圖、通報機制及分析檢討機制。
+參考檔案：B3.服務提供過程感染預防處理與監測-02感控手冊.md
+年度審閱修訂：每年務必召開一次「感染管制手冊審閱修訂會議」，依據疾管署最新公告或機構現況進行檢視。
+舉例說明：如您的範本《B3.服務提供過程感染預防、處理及監測-01操作手冊》中所示，會議紀錄應詳述討論了哪些更新（如：COVID-19最新疫苗政策、新增腸病毒濕洗手強調說明），並有具體決議與主席、出席人員簽名。
+建立感染監測與分析改善機制
+逐案檢討：只要有任何感染事件發生，就必須啟動。此處的「任何感染事件」包含服務對象即使在家中或非服務時段發生的感染。常見錯誤為機構認為非於服務期間發生就未列入紀錄，這會導致感控監測數據失真。應鼓勵並建立機制（如：透過家屬聯絡簿、電話關懷），確實登錄所有感染事件，才能完整理解個案的感染原因，進而與家庭照顧者共同合作，提供連續性的照護。
+執行方式：使用《個案疑似感染事件紀錄與追蹤表》記錄事件始末，並立即完成一份《感染逐案分析報告》。
+舉例說明：如同【個案疑似感染事件紀錄與追蹤表】，分析報告應包含事件概述、根本原因分析(RCA)、改善策略與目標、執行與追蹤及成效評估。
+定期檢討：至少每半年進行一次。
+執行方式：彙整過去半年的《感染統計表》，分析整體趨勢，並撰寫《定期檢討分析報告》。
+舉例說明：報告應包含數據彙總、趨勢與問題分析（如：發現下午時段手部衛生遵從率下降），並提出系統性的改善措施（如：辦理全員教育訓練、強化家屬溝通）。
+步驟二：落實日常監測與紀錄 (對應基準B3-2, B3-3)
+每日體溫測量
+執行方式：每日至少為每位服務對象測量體溫一次，並確實登錄於《服務對象每月體溫紀錄表》。
+紀錄重點：若有體溫異常(>37.5℃)，應用紅字標示，並在備註欄說明處理方式（如：14:00通知家屬，15:00家屬帶回就醫）。
+參考檔案：B3.服務提供過程感染預防、處理及監測-01操作手冊 中的範本七。
+感染事件通報與追蹤
+執行方式：一旦發現疑似感染個案，應立即填寫《個案疑似感染事件紀錄與追蹤表》，內容包含即時處理措施、就醫診斷、後續追蹤情形。並依規定時限內通報主管機關。
+
+步驟三：強化核心預防措施 (對應基準B3-4, B3-5)
+落實手部衛生
+稽核機制：評鑑重點在於「落實」，因此必須有查核機制。
+遵從性稽核：採無預警觀察，記錄人員在「洗手五時機」的執行率。紀錄不應全是100%，有發現缺失並提出改善建議（如：當下提醒、安排複習課程）的紀錄更具真實性。
+正確性考核：定期請人員實際操作洗手七字訣，依《洗手技術考核表》評分。
+參考檔案：手部衛生稽核紀錄表 (遵從性)】、【洗手技術考核表 (正確性)】
+鼓勵與記錄疫苗施打
+鼓勵措施：除了口頭鼓勵，應有具體作為。
+舉例說明：如範本所示，可舉辦衛教講座、說明鼓勵措施（如贈送禮品），並留下《疫苗鼓勵施打措施活動紀錄》。
+完整記錄：建立《疫苗施打總表》，區分服務對象與工作人員，內容包含姓名、疫苗種類、最新劑次接種日期。
+關鍵欄位：「未施打原因」必須詳實記錄（如：醫師評估不適合、家屬考量副作用不同意），這能證明機構已盡力追蹤。
+施打率計算：A服務對象丶B直接照顧的工作人員丶C機構醫事人員o施打率公式：A+B+C之實際接種人數／［（A+B+C）之總人數一不適合接種人數］X 100%。
+不適合接種人數是經由醫生評估。
+參考檔案：【服務對象疫苗施打總表】
+第五章：應檢附佐證資料列表
+評鑑時，請準備一個標示為「B3」的專屬資料夾，並依序放置以下評鑑期間內的文件：
+制度文件：
+《感染管制手冊》最新版 (參考 B3.服務提供過程感染預防處理與監測-02感控手冊.md)
+評鑑期間內所有《感染管制手冊年度審閱修訂會議紀錄》
+監測與分析紀錄：
+評鑑期間內所有《感染統計表》
+評鑑期間內所有《感染逐案分析報告》
+評鑑期間內所有《定期檢討分析報告》（至少每半年一份）
+日常執行紀錄：
+評鑑期間內所有《服務對象每月體溫紀錄表》
+評鑑期間內所有《個案疑似感染事件紀錄與追蹤表》
+預防措施紀錄：
+評鑑期間內所有《手部衛生稽核紀錄表 (遵從性)》與《洗手技術考核表 (正確性)》
+《疫苗鼓勵施打措施活動紀錄》
+評鑑期間內所有《服務對象疫苗施打總表》與《工作人員疫苗施打總表》
+第六章：評鑑現場人員應對重點
+主要應對人員：
+感管負責人（通常為護理師或指定主管）：應對整個B3指標的制度、流程、分析報告瞭若指掌，是回答策略性、系統性問題的主要人選。
+業務負責人：需了解感染管制在機構整體營運中的重要性，並能說明如何將改善策略納入業務計畫。
+應答準備：
+熟悉制度：感管負責人應能不看稿，流暢地說明：「我們每年會開會檢討感控手冊，這是我們今年的會議紀錄...」、「針對感染個案，我們會先做紀錄追蹤，然後完成逐案分析，找出根本原因...」。
+數據導向：當被問及感染狀況時，應能立即回答：「根據我們半年的統計，感染類型以呼吸道為主，佔X%，主要發生在冬季...為此我們提出了...等改善措施。」
+準備案例：準備一兩個完整的案例，從個案發生感染、紀錄、分析、提出改善措施到追蹤結案，能完整地口頭敘述整個流程。
+團隊準備：
+全員基本功：隨機抽問任何一位照服員，都應能正確示範洗手七字訣，並說出洗手五時機。
+情境應答：照服員應能回答：「如果發現長輩發燒咳嗽，我會先幫他戴上口罩，帶到隔離區，然後立刻報告護理師。」
+一致性原則：
+務必確保：您口頭說的（訪談）、紙上寫的（所有佐證文件）與現場做的（環境清潔、洗手設備、人員操作）三者完全一致。例如，手冊規定每日量體溫，紀錄表就要有每日紀錄；分析報告提到要加強手部衛生，現場就應該看到充足的洗手設備與人員的正確操作。
+【感染管制手冊年度審閱修訂會議紀錄】
 **財團法人永信社會福利基金會附設臺中市私立永信社區長照機構****114年度 感染管制手冊審閱修訂會議**- **會議日期：** 114年 O月 O日- **會議時間：** 上午 10:00 - 11:30- **會議地點：** 本中心會議室- **主      席：** (感管人員姓名)- **出席人員：** (業務負責人、護理師、照服員等簽名)- **會議議程：**    1.  主席報告：說明本次會議目的，依據評鑑基準每年需審閱修訂感控手冊。    2.  上次會議決議事項追蹤。    3.  討論事項：        案由一：檢視現行手冊內容是否符合114年度最新長照評鑑基準及疾管署指引。        說  明：(此處說明檢視了哪些章節，例如：新增猴痘防治措施、更新COVID-19處理流程等)。        決  議：(例如：同意修訂第七章第四節內容，由XXX於一週內完成修訂)。        案由二：...    4.  臨時動議：- **會議結論：**    1.  本次會議完成114年度感染管制手冊審閱。    2.  手冊修訂版(版次V3.0)預計於114年O月O日公告實施。- **附件：**    1.  會議簽到表    2.  會議照片
-基準二至四：感染監測、逐案與定期檢討分析
-操作說明：
-這三項基準是連貫的，從「每日監測」發現個案，到「逐案分析」找出個案原因，最後「定期分析」找出機構整體的趨勢與問題。評鑑委員重視的是一個「發現問題 -> 分析原因 -> 提出策略 -> 追蹤成效」的完整閉環管理。
-感染監測紀錄 (基準二)：
-工具： 使用《114年個案疑似機構感染登記表》及《感染統計表》每日確實記錄。
-重點： 一旦發現疑似感染個案，應立即啟動追蹤，包含通報單位主管、通知家屬、協助就醫，並將後續醫師診斷、處理方式與改善情形完整記錄下來。
-逐案檢討分析 (基準三)：
-時機： 每當有確診感染事件發生時，就應立即進行。
-方法： 參考您提供的《113.03.21羅XX-泌尿道染及腎結石(逐案分析).docx》是非常好的範本。分析內容應包含：個案基本資料、感染來源推估、現況分析、改善策略與執行、成效追蹤。
-定期檢討分析 (基準四)：
-時機： 至少每半年一次。
-方法： 彙整過去半年的《感染指標監測月統計表》，分析整體感染趨勢（例如：哪個月份呼吸道感染最多？是否集中在特定區域？）。參考《泌尿道感染1130101至1130630(半年分析).docx》的架構，針對數據進行問題分析，並提出全面性的改善措施（例如：若發現泌尿道感染偏高，可推行「飲水計畫」、加強如廁訓練等）。
-【範本二：個案疑似感染事件紀錄與追蹤表】
+【個案疑似感染事件紀錄與追蹤表】
 項目
 內容
 案主姓名
@@ -57,49 +137,68 @@
 (簽名)
 單位主管
 (簽名)
-基準五：服務對象體溫測量紀錄
-操作說明：
-每日至少測量體溫1次是基本要求，若有活動、或天氣變化大時可增加測量次數。紀錄表應方便查閱，並對異常值有後續處理註記。
-【範本三：服務對象每月體溫紀錄表】
-姓名： ______________ 月份： 114年 O月
-日期
-體溫 (°C)
-測量者
-備註 (異常處理)
-O月 1日
-36.5
-王小明
 
-O月 2日
-36.8
-王小明
+【個案疑似機構感染登記表】
+財團法人臺灣省私立永信社會福利基金會
+ _年 月個案疑似機構感染登記表
 
-O月 3日
-37.6
-李大華
-體溫異常，已於14:00通知家屬，15:00家屬帶回就醫。
-...
-...
-...
+序號
+姓名
+導尿管
+鼻胃管
+氣切管
+有無疑似感染症狀
+呼吸道
+泌尿道
+皮膚
+腸胃道
+其他
+合計
+有無
+治療
 
-O月 31日
-36.6
-陳美麗
 
-註：體溫異常(>37.5°C)請以紅筆標示或加註星號，並於備註欄說明處理方式。
-基準六、七：手部衛生作業與考核
-操作說明：
-手部衛生是預防交叉感染最有效、最經濟的方法。評鑑重點在於「落實」，因此除了張貼流程圖，更要有確實的查核機制。
-落實手部衛生作業 (基準六)：
-在所有洗手台張貼清晰的「洗手七字訣」海報。
-確保洗手設備齊全：洗手乳、擦手紙、有蓋垃圾桶。
-定期進行教育訓練，並將訓練紀錄存查。
-落實手部衛生考核 (基準七)：
-評核方式： 依評鑑基準要求，考核應分為「遵從性」與「正確性」。
-遵從性： 採「無預警」觀察法，在工作人員執行「洗手五時機」時，觀察其是否有洗手動作。
-正確性： 定期（如：每季）請工作人員實際操作一次洗手步驟，考核者依考核表逐項給分。
-重點： 考核紀錄不能「全是滿分」，應有部分不合格或需要改進的紀錄，並附上後續的再教育或改善說明，這樣才能證明機構是玩真的。
-【範本四：手部衛生稽核紀錄表 (遵從性)】
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+製表人：                 主管:
+
+
+手部衛生稽核紀錄表 (遵從性)】
 稽核日期： 114年 O月 O日 稽核者： (感管人員姓名)
 觀察對象
 洗手五時機
@@ -132,7 +231,8 @@ V
 ...
 
 本日遵從率： (實際洗手總次數 / 應洗手總次數) x 100% = O %
-【範本五：洗手技術考核表 (正確性)】
+
+【洗手技術考核表 (正確性)】
 項目
 分數
 考核結果 (☐通過 ☐不通過)
@@ -195,18 +295,8 @@ XX分
 
 評語： 指背搓揉技巧需加強，已現場指導，安排下月複考。
 受考者簽名： ____________________ 考核者簽名： ____________________
-基準八至十：疫苗施打鼓勵與紀錄
-操作說明：
-評鑑委員希望看到機構「積極作為」，而不僅僅是發通知單。提供誘因、主動安排、衛教宣導都是加分項。紀錄的完整性是佐證的關鍵。
-鼓勵措施與紀錄 (基準八、九)：
-措施： 參考您提供的《鼓勵施打疫苗措施-長者-照片.docx》，結合代幣或贈送小禮品是很好的方式。其他方式包含：舉辦疫苗衛教講座、邀請醫師到機構說明、協助預約或安排專車接種等。
-紀錄： 每次辦理鼓勵活動，都應製作一份活動紀錄，包含目的、時間、地點、對象、活動內容、照片、成果（多少人因此願意施打）等。
-疫苗施打總表 (基準十)：
-重點： 應建立服務對象與工作人員的「疫苗施打總表」，此表為動態更新。
-內容： 需包含姓名、疫苗種類（流感、COVID-19、肺炎鏈球菌等）、最新一劑接種日期。
-關鍵欄位： 「未施打原因」必須詳實記錄，例如：醫師評估不適合、家屬不同意、個人意願等。這能展現機構已盡力追蹤，而非遺漏。
-施打率計算： 應在總表下方明確計算並呈現施打率，公式為「（應施打人數 - 未施打人數） / 應施打人數 x 100%」。
-【範本六：服務對象疫苗施打總表】
+
+【服務對象疫苗施打總表】
 序號
 姓名
 流感疫苗 (113年度)
@@ -237,7 +327,3 @@ COVID-19 (XBB)
 ...
 ...
 ...
-流感疫苗施打率： O %
-COVID-19 (XBB) 施打率： O %
-(工作人員總表格式與此相同)
-希望這份詳尽的操作指引與範本對您有所幫助。評鑑的準備是系統性的工程，只要平時就將這些作業融入日常管理，屆時自然能從容應對。若您對其中任何細節需要進一步討論，或需要其他指標的協助，請隨時提出，我很樂意繼續為您服務！
