[自動同步] 更新檔案: B2.服務對象適應輔導或支持措施-01適應輔導及支持措施.md

--- a/B2.服務對象適應輔導或支持措施-01適應輔導及支持措施.md
+++ b/B2.服務對象適應輔導或支持措施-01適應輔導及支持措施.md
@@ -1,19 +1,11 @@
-個案適應輔導及支持措施（完整版）
-文件編號
-B-003-02
-工作流程
-服務管理
-生效日期
-114/01/01
-版次
-3.0
+個案適應輔導及支持措施
 一、 目的：
 為協助服務對象（以下稱個案）於進入機構初期，能順利適應環境、服務內容及團體生活，建立正向人際互動關係，並針對適應困難之個案提供即時、專業的支持與輔導，以維持穩定的服務使用，特制訂本措施。
 二、 適用範圍：
 適用於本機構所有新進托之個案。
 三、 權責單位：
-專業人力： 負責統籌適應輔導計畫、家訪、評估、召開跨專業會議及資源連結。
-醫事人力(兼職)： 負責個案生理狀況評估、健康問題處理及跨專業合作。
+專業人力或業務負責人： 負責統籌適應輔導計畫、家訪、評估、召開跨專業會議及資源連結。
+醫事人力(得為兼任)： 負責個案生理狀況評估、健康問題處理及跨專業合作。
 照顧服務員： 負責第一線執行環境介紹、生活作息引導、日常觀察記錄及情緒支持。
 四、 名詞定義：
 適應期： 指個案自入托日起算30日內。
