[自動同步] 更新檔案: B1.服務計畫及跨專業服務指標-01作業手冊.md

--- a/B1.服務計畫及跨專業服務指標-01作業手冊.md
+++ b/B1.服務計畫及跨專業服務指標-01作業手冊.md
@@ -1,18 +1,9 @@
 社區式機構 B1 服務計畫與跨專業服務 作業手冊
-文件版本：1.0
-發布日期：2024年8月20日
+
 前言
 本手冊旨在彙整社區式長照機構執行評鑑指標B1「服務計畫及跨專業服務」所需之核心辦法與全套作業表單。手冊內容依循「計畫(Plan) -> 執行(Do) -> 評估(Check) -> 調整(Act)」之品質管理循環，提供一套從個案評估、計畫擬定、日常執行至成效評估的標準化作業流程與工具，以確保服務品質之一致性、連續性，並作為評鑑時之有力佐證。
 第一部分：制度辦法
-1. 跨專業整合照護及轉介服務辦法 (優化版)
-文件編號
-H-406-05 (優化版)
-生效日期
-(待核定)
-業務單位
-服務組
-修訂日期
-2024/08/20
+1. 跨專業整合照護及轉介服務辦法
 第一條 目的
 為確保服務使用者獲得整合性、連續性的照顧服務，透過建立跨專業團隊合作模式與明確的照會轉介流程，即時回應服務使用者多元且複雜的照顧需求，以符合臺中市長期照顧服務機構評鑑基準。
 第二條 適用範圍
@@ -196,14 +187,8 @@ ____年____月____日
 參與計畫人員
 (請簽名)
 
-
-
-
 家屬/個案確認
 (請簽名)
-
-
-
 
 
 專業領域
@@ -247,13 +232,6 @@ ____年____月____日
 3. 嘗試提供不同風味飲品(如：淡蜂蜜水、決明子茶)以增加意願。
 //____
 全體 照服員
-
-
-
-
-
-
-
 3. 個別化照顧計畫目標追蹤單
 個案姓名
 
@@ -288,7 +266,7 @@ ____年____月 至 ____年____月
 飲食狀況 (早餐/午餐/點心)
 排泄狀況 (次數/量/性狀)
 活動參與
-IICP執行摘要
+個別化照顧計畫執行摘要
 特殊記事
 郭XX
 36.5/78/18/135/85
@@ -315,6 +293,7 @@ ____年____月____日 至 ____年____月____日
 
 參與評值人員
 (請簽名)
+
 
 
 一、 跨專業團隊評值與計畫調整
