[自動同步] 更新檔案: B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md

--- a/B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md
+++ b/B12.提供營養餐點服務-01供餐暨營養照護作業辦法.md
@@ -1,4 +1,4 @@
-供餐暨營養照護作業辦法 (優化版)
+供餐暨營養照護作業辦法 
 1. 目的
 為確保本機構服務對象獲得適當、均衡且富含變化的營養餐食服務，並依據個別生理、心理及特殊照護需求，提供個別化的餐食計畫與支持，以符合臺中市長期照顧服務機構評鑑指標B12「提供營養餐點服務」之要求，特制定本辦法。
 2. 適用範圍
