[自動同步] 更新檔案: B8.提供照顧者支持性服務-01支持性服務作業規範及範本.md

--- a/B8.提供照顧者支持性服務-01支持性服務作業規範及範本.md
+++ b/B8.提供照顧者支持性服務-01支持性服務作業規範及範本.md
@@ -56,7 +56,7 @@
 家屬座談會所收集之意見與回饋，應於內部會議（如月會或品質會議）進行檢討。
 根據滿意度調查與座談會回饋，由權責主管擬定改善措施，並追蹤執行成效，作為持續優化本服務之依據。
 7. 制定與修訂
-本規範經機構主任核定後實施，每年至少檢討修訂一次。
+本規範經業務負責人核定後實施，每年至少檢討修訂一次。
 
 附件一：個案家屬聯絡簿 (範本)
 個案姓名： ______________ 月份： ______ 年 ______ 月
