[自動同步] 更新檔案: B5.意外事件、緊急事件處理與預防-01操作手冊.md

--- a/B5.意外事件、緊急事件處理與預防-01操作手冊.md
+++ b/B5.意外事件、緊急事件處理與預防-01操作手冊.md
@@ -337,12 +337,14 @@ ____ 點 ____ 分
 跌倒事件
 半年不超過 O 件
 O 件
-□ 達成<br>□ 未達成
+□ 達成
+□ 未達成
 (若未達成，請說明原因)
 交通車事件
 半年不超過 O 件
 O 件
-□ 達成<br>□ 未達成
+□ 達成
+□ 未達成
 (若未達成，請說明原因)
 伍、本期品質改善指標訂定 (PDCA)
 一、計畫目標 (Plan)
