[自動同步] 更新檔案: D3.收費標準與開立收據-01佐證資料範例.md

--- a/D3.收費標準與開立收據-01佐證資料範例.md
+++ b/D3.收費標準與開立收據-01佐證資料範例.md
@@ -1,6 +1,6 @@
 長照機構評鑑指標D3 佐證資料範本全集
 範本一：收、退費作業標準 (可直接修訂後使用)
-財團法人臺灣省私立永信社會福利基金會附設臺中市私立永信社區長照機構
+財團法人臺灣省私立永信社會福利基金會附設臺中市私立XX社區長照機構
 收、退費作業標準
 核准文號： 臺中市政府衛生局 113年11月19日 府授衛照字第1130333847號函
 生效日期： 114年01月01日
@@ -27,6 +27,7 @@
 二、 終止服務退費： 個案因故終止服務時，本機構將於7個工作日內結算應退費用，並以匯款方式退還至立契約書人指定之銀行帳戶。
 柒、 附則
 本辦法經公告後實施，修正時亦同。若有未盡事宜，悉依長期照顧服務法及相關子法規定辦理。
+
 範本二：收費標準與核定公文張貼 (拍照存證用)
 說明： 請將以下兩份文件，並排張貼於機構入口公佈欄，並拍照存證，照片可放入評鑑資料夾中。
 (左側：收費標準公告)
@@ -69,8 +70,8 @@
 1,285 元/日
 交通接送
 -
-100 元/趟
-100 元/趟
+115 元/趟
+115 元/趟
 協助沐浴
 -
 200 元/次
@@ -88,7 +89,7 @@
 財團法人臺灣省私立永信社會福利基金會附設臺中市私立永信社區長照機構
 114年 02 月份 繳費通知單
 個案姓名
-張王秋菊
+張王XX
 長照等級
 CMS 等級 3
 身分別
@@ -122,6 +123,7 @@ CMS 等級 3
 0
 社區交通接送
 32趟
+(2/1-2/2, 2/5-2/7, 2/15-2/17, 2/19-2/23, 2/26-2/27, 2/29)
 趟
 100
 3,200
