--- a/D2.與服務對象或家屬訂定服務契約情形-01佐證資料範例.md
+++ b/D2.與服務對象或家屬訂定服務契約情形-01佐證資料範例.md
@@ -3,17 +3,15 @@ D2 指標評鑑佐證資料範本
 第一部分： foundational Documents (基礎合法性文件)
 這部分是證明您機構的契約具有合法性的基礎，通常會放在資料夾的最前面。
 1. 衛生局契約核備公文
-用途： 向評鑑委員證明，您機構目前使用的服務契約書版本，是經過臺中市政府衛生局審核通過的，完全合法合規。
+用途： 向評鑑委員證明，機構目前使用的服務契約書版本，是經過臺中市政府衛生局審核通過的，完全合法合規。
 應備資料：
-請放置您提供的 A322契約核備通過.pdf 檔案影本。
 文件應清晰顯示發文日期、發文字號及**「准予備查」**等關鍵字樣。
 第二部分：Systematic Management Documents (系統化管理文件)
 這部分展現了您對全機構所有契約的系統性管理能力。
 2. 簽約書一覽表
 用途： 讓評鑑委員能快速掌握全機構的簽約狀況，並是查核「審閱期」是否落實的關鍵文件。
 應備資料：
-您提供的 契約書名單.xlsx 是很好的基礎，但缺少了評鑑必要欄位。
-強烈建議您依照以下格式進行修改或新增，以完全符合評鑑要求：
+
 契約編號
 個案姓名
 契約審閱起日
@@ -21,13 +19,13 @@ D2 指標評鑑佐證資料範本
 實際簽約日期
 備註
 113心佳字第002號
-鄭文義
+鄭XX
 113/02/17
 113/02/19
 113/02/20
 審閱期3日
 113心佳字第003號
-陳顏惠吟
+陳XX
 113/01/10
 113/01/12
 113/01/13
@@ -46,7 +44,7 @@ D2 指標評鑑佐證資料範本
 3. 個案契約完整文件
 用途： 證實機構對單一個案的簽約流程完整、內容無誤，且所有變更能即時取得家屬同意。
 應備資料（以個案「鄭文義」為例）：a) 服務契約書 (已簽署正本)
-使用經衛生局核備的範本（即您提供的 永信社區服務契約1130604.docx(修改).docx）。
+使用經衛生局核備的範本。
 封面及簽名頁需有機構與家屬雙方的親筆簽名或蓋章。
 b) 契約附件 (視情況提供)
 個人資料使用授權同意書 (已簽署)
@@ -55,7 +53,7 @@ c) 服務異動單 (若有服務變更，此為必要文件)
 情境： 假設鄭先生原先每週服務3天，後因家屬需求改為每週5天。
 此時就必須產生一份服務異動單，範例如下：
 財團法人永信社會福利基金會 服務異動單
-個案姓名： 鄭文義
+個案姓名： 鄭XX
 異動日期： 113年5月1日
 異動內容說明：
 異動前服務： 日間照顧服務，每週一、三、五。
