[自動同步] 更新檔案: D3.收費標準與開立收據-01佐證資料範例.md

--- a/D3.收費標準與開立收據-01佐證資料範例.md
+++ b/D3.收費標準與開立收據-01佐證資料範例.md
@@ -20,8 +20,8 @@
 2. 銀行匯款： 匯款至繳費通知單上指定之機構帳戶。
 伍、 收據開立
 一、 本機構於確認費用入帳後，將開立正式收據。
-二、 收據內容絕對包含：服務對象姓名、收費月份、實收金額（含國字大寫）、機構收款專用章、經手人簽章。
-三、 臨櫃繳納者，當場開立收據；採匯款方式者，收據將連同次期繳費通知單一併轉交家屬。
+二、 收據內容絕對包含：服務對象姓名、身分證字號、失能等級、收費月份、實收金額（含國字大寫）、機構收款專用章、經手人簽章。
+三、 收據將連同次期繳費通知單一併轉交家屬。
 陸、 退費機制
 一、 溢繳處理： 若有溢繳費用，原則上將直接於次期應繳費用中進行抵扣。
 二、 終止服務退費： 個案因故終止服務時，本機構將於7個工作日內結算應退費用，並以匯款方式退還至立契約書人指定之銀行帳戶。
@@ -29,9 +29,9 @@
 本辦法經公告後實施，修正時亦同。若有未盡事宜，悉依長期照顧服務法及相關子法規定辦理。
 
 範本二：收費標準與核定公文張貼 (拍照存證用)
-說明： 請將以下兩份文件，並排張貼於機構入口公佈欄，並拍照存證，照片可放入評鑑資料夾中。
+說明： 請將以下兩份文件，並排張貼於機構入口公佈欄，並拍照放入評鑑資料夾中。
 (左側：收費標準公告)
-財團法人臺灣省私立永信社會福利基金會附設臺中市私立永信社區長照機構
+財團法人臺灣省私立永信社會福利基金會附設臺中市私立XX社區長照機構
 日間照顧服務收費標準公告
 核准文號： 臺中市政府113年11月19日府授衛照字第1130333847號函
 生效日期： 114年01月01日
@@ -83,10 +83,8 @@
 部分負擔： 長照給付額度內之服務，使用者需依福利身分別（一般戶16%、中低收入戶5%、低收入戶0%）自行負擔部分費用。
 詳細收費標準及自費項目，請洽本機構行政人員索取，並已載明於服務契約書中。
 永信社會福利基金會 敬啟
-(右側：主管機關核備函)
-[此處應張貼 1131119收退費核准函.pdf 的清晰影本]
-範本三：繳費通知單 (符合評鑑要求之優化範本)
-財團法人臺灣省私立永信社會福利基金會附設臺中市私立永信社區長照機構
+範本三：繳費通知單 
+臺中市私立永信社區長照機構
 114年 02 月份 繳費通知單
 個案姓名
 張王XX
@@ -156,22 +154,30 @@ CMS 等級 3
 1,900
 費用總計： 部分負擔 2,458 元 + 全自費額 1,900 元 + 上期未繳 940 元 = 應繳總額 5,298 元
 備註：
-匯款資訊：臺灣企銀-大甲分行(050)，帳號：480-62-467862，戶名：財團法人臺灣省私立永信社會福利基金會。
+匯款資訊：臺灣企銀-XX分行(050)，帳號：XXX-XX-XXXX，戶名：XXXXXX。
 對帳目有任何疑問，請於繳款期限前洽詢本機構行政人員。
 單位主管： (蓋章)
 經辦： (蓋章/簽名)
 經手人： (蓋章/簽名)
 範本四：收據 (符合評鑑要求之優化範本)
-財團法人臺灣省私立永信社會福利基金會 收 據
+財團法人臺灣省私立XX社會福利基金會 收 據
 第一聯：存根聯
 收據編號： B1140026
 開立日期： 中華民國 114 年 3 月 11 日
-茲收到 張王秋菊 先生/女士
+茲收到 張王XXX 先生/女士
 繳來 附設臺中市私立永信社區長照機構 114年02月份 日間照顧服務費
 總計新台幣： 伍仟貳佰玖拾捌 元整 ( $ 5,298 )
 此致
 服務單位用印
 
+單位主管： (蓋章)
 
-單位主管： (蓋章) <br><br> 經手人： (蓋章/簽名)
+經手人： (蓋章/簽名)
+
+
+
+
+
+
+
 第二聯：收執聯 (內容同上，交予繳款人)
