[自動同步] 更新檔案: D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md

--- a/D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md
+++ b/D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md
@@ -1,12 +1,12 @@
 D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 文件結構：
 第一部分：《個案/家屬意見反映處理辦法》
-附件一：意見反映處理流程圖 (修正版)
+附件一：意見反映處理流程圖 
 第二部分：《個案/家屬申訴處理辦法》
-附件二：申訴處理流程圖 (修正版)
-第三部分：《意見反映與申訴管道》公開揭示範本
-第四部分：《意見反映及申訴紀錄單》範本
-第五部分：《年度意見反映與申訴案件統計分析與改善策略報告》範本
+附件二：申訴處理流程圖 
+第三部分：《意見反映與申訴管道》公開揭示
+第四部分：《意見反映及申訴紀錄單》
+第五部分：《年度意見反映與申訴案件統計分析與改善策略報告》
 第一部分：《個案/家屬意見反映處理辦法》
 第一條 目的
 為提供本機構服務對象及其家屬一個暢通、便利的意見表達管道，促進雙向溝通，並將寶貴建議作為服務品質改善之依據，特訂定本辦法。
@@ -29,7 +29,7 @@ D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 案件升級：若反映人對第二次之處理結果仍不滿意，應主動告知其權益，並協助依《個案/家屬申訴處理辦法》提出申訴。
 結案：經反映人同意處理結果後，應將完整處理紀錄歸檔備查。
 第六條 本辦法經業務負責人核定後實施，修訂時亦同。
-附件一：意見反映處理流程圖 (修正版)
+附件一：意見反映處理流程圖 
 定義： 適用於服務對象或家屬對於服務內容、人員態度、環境設施等提出建議、詢問或不滿，但 未涉及 違反法令、服務安全或個案權益已造成實質損傷之情事。
 步驟 1：受理
 觸發點： 服務對象/家屬透過 口頭、書面、電話、LINE@、Email 等多元管道提出意見。
