[自動同步] 更新檔案: D3.收費標準與開立收據-01佐證資料範例.md

--- a/D3.收費標準與開立收據-01佐證資料範例.md
+++ b/D3.收費標準與開立收據-01佐證資料範例.md
@@ -1,5 +1,5 @@
 長照機構評鑑指標D3 佐證資料範本全集
-範本一：收、退費作業標準 (可直接修訂後使用)
+範本一：收、退費作業標準 
 財團法人臺灣省私立永信社會福利基金會附設臺中市私立XX社區長照機構
 收、退費作業標準
 核准文號： 臺中市政府衛生局 113年11月19日 府授衛照字第1130333847號函
@@ -159,7 +159,7 @@ CMS 等級 3
 單位主管： (蓋章)
 經辦： (蓋章/簽名)
 經手人： (蓋章/簽名)
-範本四：收據 (符合評鑑要求之優化範本)
+範本四：收據 
 財團法人臺灣省私立XX社會福利基金會 收 據
 第一聯：存根聯
 收據編號： B1140026
