[自動同步] 更新檔案: D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md

--- a/D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md
+++ b/D4.意見反映/申訴機制的訂定與處理-01佐證資料範例.md
@@ -15,15 +15,15 @@ D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 第三條 定義
 本辦法所稱之「意見反映」，係指服務對象或家屬對於本機構之服務內容、人員態度、環境設施、行政流程等事項提出建議、詢問或感到不滿，但未涉及違反法令、服務安全、個案身體或權益已造成實質損傷之情事。
 第四條 意見反映管道
-口頭反映：可隨時向現場工作人員、督導或組長直接提出。
+口頭反映：可隨時向現場工作人員、主管或業務負責人直接提出。
 書面反映：填寫《意見反映及申訴紀錄單》，投入機構設置之【意見箱】。
 電話反映：撥打機構專線：(04) 2682-0128。
 通訊軟體：透過本機構官方LINE@帳號留言。
-電子郵件：寄送至 homecare@yungshingroup.com。
+電子郵件：寄送至 homecare@XXXX.com。
 第五條 處理流程與時效
 本辦法之處理流程詳見附件一《意見反映處理流程圖》，重點摘要如下：
-受理：任何工作人員接獲意見反映後，應立即通報權責督導或組長，並填寫《意見反映及申訴紀錄單》進行登錄。
-處理：由權責督導或組長於 3個工作日內 進行事實了解與初步處理。
+受理：任何工作人員接獲意見反映後，應立即通報權責主管，並填寫《意見反映及申訴紀錄單》進行登錄。
+處理：由權責主管於 3個工作日內 進行事實了解與初步處理。
 首次回覆：應於 7個工作日內，以反映人希望之方式（如：電話、當面、書面）回覆處理結果，並確認其滿意度。
 重新處理：若反映人對首次回覆不滿意，受理單位應於 5個工作日內 重新擬定處理方案並再次回覆。
 案件升級：若反映人對第二次之處理結果仍不滿意，應主動告知其權益，並協助依《個案/家屬申訴處理辦法》提出申訴。
@@ -35,19 +35,19 @@ D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 觸發點： 服務對象/家屬透過 口頭、書面、電話、LINE@、Email 等多元管道提出意見。
 執行者： 任何工作人員。
 動作：
-立即通報 權責督導 或 組長。
+立即通報 權責主管。
 使用《意見反映及申訴紀錄單》進行案件登錄。
 ↓
 步驟 2：處理
 時效： 3 個工作日內。
-執行者： 權責督導或組長。
+執行者： 權責主管。
 動作：
 進行事實調查與了解。
 研擬初步處理方案。
 ↓
 步驟 3：首次回覆
 時效： 7 個工作日內。
-執行者： 權責督導或組長。
+執行者： 權責主管。
 動作：
 以反映人希望的方式（電話、當面、書面等）進行正式回覆。
 說明處理結果與改善措施，並確認其滿意度。
@@ -87,23 +87,23 @@ D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 除意見反映之管道外，亦可直接向本機構業務負責人提出申訴，或透過外部主管機關管道提出。
 第五條 處理流程與時效
 本辦法之處理流程詳見附件二《申訴處理流程圖》，重點摘要如下：
-受理：申訴案件由權責督導或主管受理後，應立即陳報業務負責人。業務負責人應判斷案件急迫性，並指派成立處理小組。
+受理：申訴案件由權責主管受理後，應立即陳報業務負責人。業務負責人應判斷案件急迫性，並指派成立處理小組。
 調查：處理小組應進行全面、客觀之事實調查，並判斷是否需依法通報主管機關。
 首次回覆：應於 7個工作日內 (急件為3個工作日內)以正式書面或當面方式回覆申訴人，說明調查結果與處理方案。
 重新審議：若申訴人對首次回覆不滿意，業務負責人應於 7個工作日內 召集複審會議，並提出最終處理方案。
 外部管道告知：若申訴人對最終處理結果仍不滿意，應由業務負責人主動告知其可循主管機關等外部管道申訴，並提供相關資訊。
 結案與改善：案件處理完成後，應將完整資料歸檔，並將分析結果納入機構年度品質改善計畫。
 第六條 本辦法經業務負責人核定後實施，修訂時亦同。
-附件二：申訴處理流程圖 (修正版)
+附件二：申訴處理流程圖 
 定義： 適用於涉及 服務安全、個案身體或權益損傷、違反法規，或經「意見反映」後仍不滿意之重大情事。
 步驟 1：受理
 觸發點： 服務對象/家屬提出申訴，或由「意見反映」案件升級。
-執行者： 權責督導或主管。
+執行者： 權責主管。
 動作： 立即陳報 業務負責人，並判斷案件急迫性。
 ↓
 步驟 2：調查
 執行者： 業務負責人指派成立 處理小組。
-動作： 進行全面事實調查，並判斷是否需依法通報主管機การ。
+動作： 進行全面事實調查，並判斷是否需依法通報主管機關。
 ↓
 步驟 3：協調與處理
 執行者： 處理小組。
@@ -141,8 +141,8 @@ D4.意見反映/申訴機制的訂定與處理-01佐證資料範例
 親愛的長輩、家屬，您好：
 為了不斷提升我們的服務，我們鼓勵您隨時分享您的建議、疑慮或讚美。您的每一份回饋，都是我們進步的動力。
 【機構內部反映管道】
-直接告訴我們：歡迎與現場工作人員、督導或組長面談。
-投入意見箱：請填寫表單後，投入入口處的紅色意見箱。
+直接告訴我們：歡迎與現場工作人員、主管面談。
+投入意見箱：請填寫表單後，投入入口處的意見箱。
 撥打電話：(04) 2682-0128
 加入LINE@：(此處放置機構LINE@的QR Code)
 E-mail：homecare@yungshingroup.com
@@ -151,25 +151,79 @@ E-mail：homecare@yungshingroup.com
 臺中市衛生局：(04) 2526-5394
 臺中市民一碼通：1999
 衛生福利部全國長照服務專線：1966
-第四部分：《意見反映及申訴紀錄單》範本
-|
-| 財團法人臺灣省私立永信社會福利基金會 附設 臺中市私立永信社區長照機構 |
-| 意見反映及申訴紀錄單 |
-| 案件編號 | (由機構填寫) | 受理日期 | __年__月__日 |
-| 服務對象姓名 | | 填寫人/反映人 | |
-| 與服務對象關係 | | 聯絡電話 | |
-| 案件類型 | □ 意見反映 □ 申訴 | 受理方式 | □口頭 □書面 □電話 □LINE@ □Email □其他 |
-| 受理人員 | | | |
-| 事件主旨/分類 | □服務品質 □環境設施 □人員態度 □行政管理 □交通服務 □個案安全 □其他： | | |
-| 事件內容詳述 | (請記錄人、事、時、地、物) | | |
-| 處理過程紀錄 | | | |
-| 首次回覆日期/方式/內容 | | | |
-| 反映人滿意度(首次) | □滿意 □不滿意，原因： | | |
-| 重新處理過程紀錄 | (若首次不滿意則填寫) | | |
-| 第二次/最終回覆日期/方式/內容 | | | |
-| 反映人滿意度(最終) | □滿意 □不滿意，原因： | | |
-| 權責主管簽核 | | 業務負責人複核 | (申訴案需複核) |
-| 備註/後續追蹤事項 | | | |
+第四部分：《意見反映及申訴紀錄單》
+臺中市私立XX社區長照機構 
+意見反映及申訴紀錄單 
+項目
+內容
+項目
+內容
+案件編號
+(由機構填寫)
+受理日期
+__年__月__日
+服務對象姓名
+
+填寫人/反映人
+
+與服務對象關係
+
+聯絡電話
+
+案件類型
+□ 意見反映 □ 申訴
+受理方式
+□口頭 □書面 □電話 □LINE@ □Email □其他
+受理人員
+
+
+
+事件主旨/分類
+□服務品質 □環境設施 □人員態度 □行政管理 □交通服務 □個案安全 □其他：
+
+
+事件內容詳述
+
+(請記錄人、事、時、地、物)
+
+
+
+處理過程紀錄
+
+
+
+首次回覆日期/方式/內容
+
+
+
+反映人滿意度(首次)
+□滿意 □不滿意，原因：
+
+
+重新處理過程紀錄
+
+(若首次不滿意則填寫)
+
+
+
+第二次/最終回覆日期/方式/內容
+
+
+
+反映人滿意度(最終)
+□滿意 □不滿意，原因：
+
+
+填寫人員
+
+主管簽核
+簽核至應核決之主管
+
+備註/後續追蹤事項
+
+
+
+
 第五部分：《年度意見反映與申訴案件統計分析與改善策略報告》範本
 報告期間： OOO 年 1 月 1 日 至 OOO 年 12 月 31 日
 壹、案件統計分析
@@ -190,9 +244,26 @@ LINE@： O 件 (XX%)
 省思與檢討：
 參、綜合檢討與改善策略
 根據本年度統計與質性分析，歸納出以下待改善重點，並擬定具體改善策略，將納入下一年度業務計畫執行：
-| 問題癥結 | 具體改善策略 | 負責單位/人員 | 預計完成時程 | 追蹤指標 |
-| 1. (例)家屬最常反映交通車路線安排不佳，導致等待時間過長。 | 1-1. 全面重新檢視並優化現行交通車路線。 1-2. 導入交通車GPS定位分享功能。 1-3. 修訂司機延誤回報SOP。 | 交通組長 | OOO年O月O日前 | 交通車相關客訴案件數下降50%。 |
-| 2. ... | | | | |
+
+問題癥結
+具體改善策略
+負責單位/人員
+預計完成時程
+追蹤指標
+1. (例)家屬最常反映交通車路線安排不佳，導致等待時間過長。
+1-1. 全面重新檢視並優化現行交通車路線。
+
+1-2. 導入交通車GPS定位分享功能。
+
+1-3. 修訂司機延誤回報SOP。
+專業人力
+OOO年O月O日前
+交通車相關客訴案件數下降50%。
+2. ...
+
+
+
+
 肆、結論
 (總結本年度狀況，並期許透過改善策略提升服務品質)
 報告人： OOO 核稿： OOO 核准： OOO
