[自動同步] 更新檔案: C3.廚房及用餐環境、清潔衛生-00操作指引.md

--- a/C3.廚房及用餐環境、清潔衛生-00操作指引.md
+++ b/C3.廚房及用餐環境、清潔衛生-00操作指引.md
@@ -6,22 +6,32 @@
 評核方式
 備註說明
 1. 廚房應配置食物之貯藏、冷藏(凍)、烹煮(或加熱)與配膳及餐具清潔之設備。
-文件檢閱、現場察看
--
 2. 冷藏(凍)設備溫度須符合法令規定，及放置溫度計並進行溫度紀錄。
+3. 廚房用具及餐具應洗滌乾淨經有效殺菌，並將餐具置於存放櫃，存放櫃應足夠容納所有餐具，並將存放在清潔區域。
+4. 用餐環境維持清潔，且有定期清掃及消毒之紀錄。
+5. 用餐的設施設備、動線，可滿足服務對象之需求。
+文件檢閱、現場察看
 1. 檢視廚房及用餐環境定期清掃及消毒紀錄。
 2. 設施設備可滿足服務對象之需求係強調用餐環境之傢俱、通行空間應能符合使用輔具者之需求。
 3. 檢視相關紀錄及溫度計，冷藏(凍)設備儲藏溫度:冷藏應設定於7℃以下結凍點以上；冷凍應設定於-18℃以下。
--
-3. 廚房用具及餐具應洗滌乾淨經有效殺菌，並將餐具置於存放櫃，存放櫃應足夠容納所有餐具，並將存放在清潔區域。
--
--
-4. 用餐環境維持清潔，且有定期清掃及消毒之紀錄。
+
 -
 -
-5. 用餐的設施設備、動線，可滿足服務對象之需求。
 -
 -
+-
+
+
+
+
+
+
+
+
+
+
+
+
 第三章：與其他指標之連貫性
 C3指標作為環境安全的核心環節，與其他指標緊密相連，構成一個完整的品質管理體系。
 計畫輸入 (Input):
@@ -53,7 +63,7 @@ D5 服務滿意度調查: 乾淨的用餐環境與合適的餐具，會直接影
 執行與紀錄：
 每日定時紀錄： 每日應至少定時紀錄上、下午各一次，確實檢查並記錄溫度。
 使用紀錄表： 使用標準化的**「冰箱冷藏冷凍溫度紀錄表」**，確實填寫日期、時間、溫度、紀錄人簽名。
-異常處理： 當溫度超出標準值時，應立即調整設定並於「異常狀況描述與處理方式」欄中說明原因及處理措施（例如：調整溫度設定、通知維修），若持續異常應安排檢修。
+異常處理： 當溫度超出標準值時，應立即調整設定並於「異常狀況描述與處理方式」欄中說明原因及處理措施（例如：調整溫度設定、通知維修），若持續異常應安排檢修，同時確認冰箱內儲存食物之安全。
 顧問叮嚀 (實務建議)：
 考量設備限制： 一般家用冰箱的冷凍效能要長時間穩定維持在-18℃有其難度。
 減少冷凍品： 建議日照中心盡量減少非必要的冷凍庫存品，特別是在評鑑前夕，以減輕冰箱負荷。
