[自動同步] 更新檔案: C2.日常活動場所使用-00操作指引.md

--- a/C2.日常活動場所使用-00操作指引.md
+++ b/C2.日常活動場所使用-00操作指引.md
@@ -1,22 +1,61 @@
-評鑑指標C2：日常活動場所使用 - 操作指引
-一、 指標目的與核心精神
-本指標旨在檢視機構是否能提供一個安全、舒適、便利且具有「家」的氛圍的日常活動環境。評核重點不僅在於硬體設施是否齊備，更在於空間規劃是否能促進服務對象的社交互動、支持個別化需求，並維護其生活尊嚴。
-此外，本指引特別融入**「高齡友善健康照護機構認證」**的精神，強調尊重個體差異，提供具療癒性與支持性的彈性空間。
-二、 評鑑基準深度解析與準備策略
+永信社會福利基金會～C2.日常活動場所使用 操作指引
+第一章：指標核心要求
+本指標旨在檢視機構是否能提供一個安全、舒適、便利且具有溫馨、舒適、如「家」一般的氛圍的日常活動環境。評核重點不僅在於硬體設施是否齊備，更在於空間規劃是否能極大化服務對象的社交互動、支持個別化需求，並維護其生活尊嚴。此外，本指引特別融入**「高齡友善健康照護機構認證」**的精神，強調尊重個體差異，提供具療癒性與支持性的彈性空間。
+第二章：臺中市114年度評鑑基準
+基準說明
+評核方式
+備註說明
+1. 提供客廳、廚房等居家空間及單元照顧的活動空間。
+2. 必要時得依服務對象需求設置適當且獨立的安靜空間，並提供個別化服務。
+3. 日常活動空間之位置符合服務對象使用之需求及便利性，並依服務對象需要提供便利其活動之空間及動線。
+4. 提供服務對象交誼所需設施設備。
+現場察看、現場訪談
+
+1. 訪問服務對象使用情形。
+
+2. 現場察看機構是否有足夠之設施設備供服務對象交誼所需。
+1.「基準說明2」可參照「高齡友善健康照護機構認證」。
+
+2. 評核方式訂有訪談服務對象了解執行情形者，不適用於失智症者。
+
+
+
+
+
+
+
+
+
+第三章：與其他指標之連貫性
+計畫輸入(Input)
+A1.業務計畫擬訂與執行: 在年度計畫中，應編列預算採購或維護C2指標相關的設施設備(如沙發、益智桌遊)，並規劃空間營造的目標。
+B1.服務計畫及跨專業服務: 透過個案評估，了解服務對象的興趣、社交需求與特殊空間需求(如需要安靜角落)，這些評估結果是C2空間規劃與個別化服務的基礎。
+計畫內容(Content)
+B7.服務對象團體或社區活動辦理: C2提供的多元設施設備(如卡拉OK、益智桌遊)是B7活動得以順利執行的硬體基礎。
+B10.維持自我照顧能力: C2規劃的居家空間(如開放式廚房)提供了執行生活賦能活動的場域，讓長輩能參與備餐等日常事務，維持自我照顧能力。
+計畫輸出(Output)
+D5.服務滿意度調查: 在滿意度調查中，應包含對「環境與設施設備」的滿意度提問，其回饋結果可作為檢討C2執行成效的重要依據。
+B2.服務對象適應輔導或支持措施: C2提供的獨立安靜空間，是B2針對適應困難個案提供輔導關懷時的重要支持性環境。
+第四章：評鑑準備操作步驟
 C2-1：提供客廳、廚房等居家空間及單元照顧的活動空間
-核心目標： 擺脫傳統機構的冰冷感，營造溫馨的「家庭生活」場景。
+核心目標： 擺脫傳統機構的冰冷感，營造一個溫馨、安全、鼓勵社交的「社區客廳」場景。
 準備策略：
-空間佈置： 採用居家風格的家具（如沙發、茶几）、溫暖色系的燈光、窗簾、掛畫或植栽等裝飾品，創造溫馨感。
-功能規劃： 打造類家庭的公共區域，如客廳（交誼廳）、餐廳，以及可供長輩參與或觀看備餐過程的開放式廚房/中島，鼓勵他們像在家一樣自然地使用這些空間。
-佐證資料： 準備高品質的實景照片，呈現長輩在這些空間中自然互動、休憩的畫面，並附上圖說強調「居家感」的設計理念。
+空間佈置： 採用居家風格的家具（如沙發、茶几）、溫暖色系的燈光、窗簾、掛畫或植栽等裝飾品，創造溫馨且促進互動的氛圍。
+功能規劃： 打造類家庭的公共區域，如客廳（交誼廳）、餐廳，以及可供長輩參與或觀看備餐過程的開放式廚房/中島，鼓勵他們自在地使用這些空間，促進人際交流。
+佐證資料： 準備高品質的實景照片，呈現長輩在這些空間中自然互動、休憩的畫面，並附上圖說強調「溫馨社交」的設計理念。
+範例：
+客廳/交誼廳： 我們以家庭客廳為設計概念，配置舒適的沙發、茶几與電視，營造出溫馨、放鬆的社交中心，鼓勵服務對象在此自由交流、建立友誼，享受自在的日間時光。
+餐廳與開放式廚房： 採用明亮、溫馨的餐廳設計，並結合開放式中島。服務對象不僅在此用餐，也能參與簡易的備餐活動（如洗菜、挑菜），或在中島區與工作人員互動，增進生活參與感與社群歸屬感。
+
 C2-2：設置適當且獨立的安靜空間，並提供個別化服務（結合高齡友善）
 核心目標： 尊重服務對象的個體差異與情緒需求，提供個人化的選擇與支持。
-高齡友善重點：
-「安靜空間」不等於「隔離空間」，它是一個**「療癒角落 (Healing Corner)」**。此空間應提供一個舒適、不受打擾的環境，供服務對象在需要時可以獨處、沉澱思緒、緩和情緒，或與工作人員、家屬進行一對一的深入交談。
-空間應具備舒適的單人沙發或座椅、柔和的光線，並可放置能帶來慰藉的物品（如輕音樂播放器、觸感舒適的抱枕、熟悉的書籍等）。
 準備策略：
 空間規劃： 在活動區的角落規劃出一個相對獨立的區域，並能向委員說明其「療癒角落」的設計理念與使用方式。
 個別化活動： 準備服務對象從事個人興趣活動的紀錄（照片或文字），例如：使用裁縫機、寫書法、拼圖、閱讀等。這能強而有力地證明機構不僅辦理團體活動，更能支持服務對象的獨特專長與個人偏好。
+範例：
+療癒空間： 我們特別在活動區一隅規劃了此安靜空間。當服務對象感到疲憊、需要獨處或希望進行靜態活動時，可在此休憩、閱讀或聆聽音樂，我們尊重並支持每位長者的個人化需求與情緒調節。
+個別化活動實錄： 我們深信，維持個人興趣是尊嚴生活的重要一環。機構依據服務對象的過去職業、興趣與目前的能力，主動提供材料與支持，鼓勵他們從事自己喜愛的活動。圖為王奶奶正在使用裁縫機、李伯伯正在寫書法、陳阿姨在玩拼圖，展現了我們對個別化服務的重視。
+
 C2-3：日常活動空間之位置與動線便利性
 核心目標： 確保所有服務對象，特別是行動不便者，都能安全、無礙地在機構內移動。
 準備策略：
@@ -24,6 +63,9 @@ C2-3：日常活動空間之位置與動線便利性
 地面安全： 檢視所有地面是否平坦、防滑，地毯是否平整固定，門檻處是否有順平處理。
 易達性： 主要活動區域（如廁所、餐廳、交誼廳）應位於服務對象容易到達的位置，避免複雜或過長的移動路徑。
 佐證資料： 可繪製一張簡易的機構平面圖，用箭頭標示出主要動線，並註明走道寬度，展現無障礙的規劃。
+範例：
+無障礙動線規劃： 全區活動空間皆為平坦、防滑地面，走道寬度均大於90公分，並保持淨空，確保使用輪椅或助行器的服務對象皆能安全、順暢地移動至各個活動區域。
+
 C2-4：提供服務對象交誼所需設施設備
 核心目標： 透過多元的設施設備，促進服務對象的人際互動，豐富其社交生活。
 準備策略：
@@ -31,11 +73,55 @@ C2-4：提供服務對象交誼所需設施設備
 益智類： 象棋、圍棋、麻將、撲克牌、各式桌遊、拼圖。
 文康類： 書報雜誌、懷舊照片、音樂/卡拉OK設備。
 體能類： 簡易的復健/體能器材（如手搖車、踏步機）。
-製作設備清冊： 建立一份詳細的**「交誼設施設備列表」**，包含項目名稱、數量、存放位置及管理人員。這不僅方便盤點，也向委員展現機構對設備管理的系統性。
+製作設備清冊： 建立一份詳細的「交誼設施設備列表」，包含項目名稱、數量、存放位置及管理人員。這不僅方便盤點，也向委員展現機構對設備管理的系統性。
 定期維護： 確保所有設備乾淨、功能正常且安全無虞。
-三、 迎評現場應對
-環境準備： 評鑑當日，確保所有空間整潔、明亮、無異味，動線暢通。
-人員準備：
-所有工作人員都應熟悉各空間的功能與設計理念。
-當評鑑委員訪談時，工作人員應能自然地說明如何引導服務對象使用設施，以及如何安排與執行個別化活動。
-展現出對服務對象需求的細膩觀察與積極回應的態度。
+範例：交誼設施設備清冊
+空間區域
+項目分類
+項目名稱
+數量
+用途說明
+管理人員
+A教室
+益智類
+拼圖 (不同片數)
+13 副
+訓練認知能力、手眼協調與專注力。
+吳XX
+A教室
+益智類
+象棋、圍棋、跳棋
+各2組
+提供策略思考的樂趣，促進長者間的社交互動。
+吳XX
+A教室
+文康類
+認知圖卡、紙牌
+數組
+可用於團體認知活動或個人遊戲。
+洪XX
+B教室
+體能類
+電動手足健身機、踏步機
+各2台
+維持與促進長者上下肢肌力與心肺功能。
+陳XX
+B教室
+影音類
+電視、卡拉OK設備
+1 組
+提供影音娛樂、新聞資訊或帶動健康操。
+陳XX
+
+第五章：應檢附佐證資料列表
+《C2 日常活動場所使用 佐證資料》: 一份圖文並茂的說明文件，包含各空間實景照片與文字說明，對應C2-1至C2-4的要求。
+交誼設施設備清冊: 詳列機構內所有相關設備的清單，證明管理的系統性。
+機構平面圖: 標示出主要動線與寬度，證明符合C2-3的便利性與無障礙要求。
+個別化活動紀錄: 準備1-2份個案從事個人興趣活動的照片或紀錄，證明C2-2的個別化服務。
+第六章：評鑑現場人員應對重點
+主要應對人員： 業務負責人、行政主管、第一線照顧服務員。
+應答準備：
+業務負責人/主管： 應能流暢地說明整體空間的「設計理念」，特別是**「溫馨社交」與「療癒空間」的規劃巧思，強調這裡是促進長輩人際互動的場域**。
+照顧服務員： 當委員詢問時，應能自然地說明如何引導服務對象使用各項設施，並能舉例說明如何支持長輩進行「個別化活動」(例如：我們會鼓勵喜歡畫畫的陳奶奶到安靜角落創作)。
+團隊準備： 確保所有人員對各空間的稱呼與功能說明口徑一致。
+一致性原則： 評鑑當日的現場環境佈置、佐證文件中的照片、以及人員的口頭陳述，三者必須完全一致。例如，文件中的「療癒空間」在現場必須能清楚指認，且功能與所述相符。
