[自動同步] 更新檔案: C2.日常活動場所使用-01佐證資料範例.md

--- a/C2.日常活動場所使用-01佐證資料範例.md
+++ b/C2.日常活動場所使用-01佐證資料範例.md
@@ -7,26 +7,36 @@ C2 日常活動場所使用
 文件日期
 (請填寫製作年/月/日)
 一、 空間規劃：營造居家氛圍與無障礙動線 (對應基準 C2-1, C2-3)
-1. 居家生活空間展示
+1. 生活空間展示
 空間照片
 說明
-(請在此貼上客廳/交誼廳的清晰照片) <br> 範例：長輩們在沙發區聊天看電視的畫面
-客廳/交誼廳：<br>我們以家庭客廳為設計概念，配置舒適的沙發、茶几與電視，營造出溫馨、放鬆的社交中心，鼓勵服務對象在此自由交流、休憩，享受如在家般的自在生活。
-(請在此貼上餐廳/廚房中島的清晰照片) <br> 範例：長輩圍坐在餐桌用餐，或在中島協助準備點心的畫面
-餐廳與開放式廚房：<br>採用明亮、溫馨的餐廳設計，並結合開放式中島。服務對象不僅在此用餐，也能參與簡易的備餐活動（如洗菜、挑菜），或在中島區與工作人員互動，增進生活參與感與居家氛圍。
-(請在此貼上戶外/園藝空間的清晰照片，若有) <br> 範例：長輩在陽台澆花、曬太陽的畫面
-戶外陽台/園藝區：<br>我們規劃了安全的戶外空間，提供園藝活動與休憩座椅，讓服務對象能接觸陽光與自然，進行植栽活動，療癒身心。
+(請在此貼上客廳/交誼廳的清晰照片) 
+ 範例：長輩們在沙發區聊天看電視的畫面
+客廳/交誼廳：
+我們以家庭客廳為設計概念，配置舒適的沙發、茶几與電視，營造出溫馨、放鬆的社交中心，鼓勵服務對象在此自由交流、休憩，享受如在家般的自在生活。
+(請在此貼上餐廳/廚房中島的清晰照片)
+範例：長輩圍坐在餐桌用餐，或在中島協助準備點心的畫面
+餐廳與開放式廚房：
+採用明亮、溫馨的餐廳設計，並結合開放式中島。服務對象不僅在此用餐，也能參與簡易的備餐活動（如洗菜、挑菜），或在中島區與工作人員互動，增進生活參與感與居家氛圍。
+(請在此貼上戶外/園藝空間的清晰照片，若有)
+範例：長輩在陽台澆花、曬太陽的畫面
+戶外陽台/園藝區：
+我們規劃了安全的戶外空間，提供園藝活動與休憩座椅，讓服務對象能接觸陽光與自然，進行植栽活動，療癒身心。
 2. 安全便利之活動動線
 空間照片/圖示
 說明
-(請在此貼上走廊/主要通道的照片) <br> 範例：一位使用助行器的長輩正在寬敞的走廊上行走
-無障礙動線規劃：<br>全區活動空間皆為平坦、防滑地面，走道寬度均大於90公分，並保持淨空，確保使用輪椅或助行器的服務對象皆能安全、順暢地移動至各個活動區域。
+(請在此貼上走廊/主要通道的照片)
+ 範例：一位使用助行器的長輩正在寬敞的走廊上行走
+無障礙動線規劃：
+全區活動空間皆為平坦、防滑地面，走道寬度均大於90公分，並保持淨空，確保使用輪椅或助行器的服務對象皆能安全、順暢地移動至各個活動區域。
 二、 個別化服務：尊重個體需求的彈性空間 (對應基準 C2-2)
 1. 獨立安靜空間 (療癒角落)
 空間照片
 說明
-(請在此貼上安靜角落/閱讀區的清晰照片) <br> 範例：一個舒適的單人沙發旁有書櫃與立燈
-療癒角落：<br>我們特別在活動區一隅規劃了此安靜空間。當服務對象感到疲憊、需要獨處或希望進行靜態活動時，可在此休憩、閱讀或聆聽音樂，我們尊重並支持每位長者的個人化需求與情緒調節。
+(請在此貼上安靜空間/閱讀區的清晰照片) 
+範例：一個舒適的單人沙發旁有書櫃與立燈
+療癒空間：
+我們特別在活動區一隅規劃了此安靜空間。當服務對象感到疲憊、需要獨處或希望進行靜態活動時，可在此休憩、閱讀或聆聽音樂，我們尊重並支持每位長者的個人化需求與情緒調節。
 2. 個別化活動實錄
 (此處可放入2-4張服務對象從事個人活動的照片拼貼)
 照片說明：
@@ -44,43 +54,43 @@ A教室
 拼圖 (不同片數)
 13 副
 訓練認知能力、手眼協調與專注力。
-吳金芳
+吳XX
 A教室
 益智類
 象棋、圍棋、跳棋
 各2組
 提供策略思考的樂趣，促進長者間的社交互動。
-吳金芳
+吳XX
 A教室
 文康類
 認知圖卡、紙牌
 數組
 可用於團體認知活動或個人遊戲。
-洪婉蓉
+洪XX
 A教室
 文康類
 書報雜誌
 數份
 提供時事資訊，鼓勵個人閱讀或團體讀報。
-陳思樺
+陳XX
 B教室
 體能類
 電動手足健身機、踏步機
 各2台
 維持與促進長者上下肢肌力與心肺功能。
-陳素珠
+陳XX
 B教室
 體能類
 肩關節訓練器、上下肢訓練器
 各1台
 針對特定關節與肌群提供溫和的訓練。
-陳素珠
+陳XX
 B教室
 影音類
 電視、卡拉OK設備
 1 組
 提供影音娛樂、新聞資訊或帶動健康操。
-陳素珠
+陳XX
 戶外陽台
 園藝類
 盆栽、園藝工具、灑水器
