[自動同步] 更新檔案: C1.休憩設備設置-01佐證資料範例.md

--- a/C1.休憩設備設置-01佐證資料範例.md
+++ b/C1.休憩設備設置-01佐證資料範例.md
@@ -10,11 +10,15 @@
 可調式沙發躺椅
 5 張
 
-1. **穩固安全：**座椅結構穩固，無銳角設計。<br>2. **個別化調整：**可手動調整椅背與腿靠角度，滿足服務對象坐臥的不同需求，符合人體工學。<br>3. **扶手設計：**兩側設有扶手，方便長輩起身與坐下時施力支撐。
+1. **穩固安全：**座椅結構穩固，無銳角設計。
+2. **個別化調整：**可手動調整椅背與腿靠角度，滿足服務對象坐臥的不同需求，符合人體工學。
+3. **扶手設計：**兩側設有扶手，方便長輩起身與坐下時施力支撐。
 休憩沙發椅
 5 張
 
-1. **高度適中：**座椅高度經考量，有利於長者膝關節彎曲與起身。<br>2. **材質舒適：**選用親膚透氣之皮革材質，易於清潔與保養。<br>3. **一致性與美觀：**統一的設備提供整潔、溫馨的休憩環境。
+1. **高度適中：**座椅高度經考量，有利於長者膝關節彎曲與起身。
+2. **材質舒適：**選用親膚透氣之皮革材質，易於清潔與保養。
+3. **一致性與美觀：**統一的設備提供整潔、溫馨的休憩環境。
 其他休憩座椅
 數張
 
@@ -33,7 +37,9 @@ B. 冷暖氣設備
 功能說明
 室內機與控制器
 
-1. **全面覆蓋：**機構內所有主要空間均設有出風口與獨立控制器。<br>2. **功能正常：**設備功能經定期檢測，冷氣與暖氣模式皆可正常運作。<br>3. **操作便利：**工作人員均熟悉操作，可依據當日天氣及服務對象體感溫度，即時進行最適當的調整。
+1. **全面覆蓋：**機構內所有主要空間均設有出風口與獨立控制器。
+2. **功能正常：**設備功能經定期檢測，冷氣與暖氣模式皆可正常運作。
+3. **操作便利：**工作人員均熟悉操作，可依據當日天氣及服務對象體感溫度，即時進行最適當的調整。
 室外主機
 
 設備主機安裝於戶外指定位置，符合安全規範，並定期進行維護保養，確保運作效能與安全。
