[自動同步] 更新檔案: C1.休憩設備設置-00操作指引.md

--- a/C1.休憩設備設置-00操作指引.md
+++ b/C1.休憩設備設置-00操作指引.md
@@ -15,10 +15,9 @@
 C1 指標作為環境安全領域的基礎，與機構營運的其他面向環環相扣，形成一個完整的品質管理體系。
 計畫輸入 (Input):
 A1 業務計畫擬訂與執行: 年度預算中應編列休憩設備的採購、維護或汰換經費。
-A5 健全的財務管理制度: 採購設備的支出應有獨立且清楚的帳目可查。
 計畫內容 (Content):
 C11 器材維護與管理: 本指標中的休憩設備及冷暖氣設備，應被納入 C11 的設備總清冊中，並有專人定期執行維護管理紀錄。
-B1 服務計畫及跨專業服務: 對於有特殊身體狀況（如：背部不適、壓瘡風險）的服務對象，其個別化服務計畫(IICP)中應載明需提供特殊坐臥輔具（如減壓坐墊），這與 C1 指標中設備的適當性直接相關。
+B1 服務計畫及跨專業服務: 對於有特殊身體狀況（如：背部不適、壓瘡風險）的服務對象，其個別化照顧計畫中應載明需提供特殊坐臥輔具（如減壓坐墊），這與 C1 指標中設備的適當性直接相關。
 計畫輸出 (Output):
 B9 服務對象生活輔助: 舒適且符合人體工學的休憩設備，有助於維持服務對象的身體功能，減少因不當坐臥造成的二次傷害。
 D5 服務滿意度調查: 休憩環境的舒適度是影響服務對象及家屬整體滿意度的重要因素之一，調查結果可回饋作為 C1 指標的改善依據。
@@ -27,7 +26,7 @@ D5 服務滿意度調查: 休憩環境的舒適度是影響服務對象及家屬
 此步驟旨在確保所有休憩設備的安全性與法規符合性。
 列出清冊： 全面盤點機構內所有供服務對象休憩的設備，製作成詳細的設備清冊。
 逐一安檢： 依清冊逐項檢查設備的穩固性（有無搖晃）、安全性（有無銳角或破損），並評估是否適合長輩使用（例如：沙發椅不能過軟、高度是否方便長輩起身站立）。
-製作佐證資料： 參考下方範例，將清冊結合照片與說明，製作成一份完整的佐證文件。【舉例說明】您可以參考 C1.休憩設備設置-01佐證資料範例 的格式，建立如下的佐證表格：
+製作佐證資料： 參考下方範例，將清冊結合照片與說明，製作成一份完整的佐證文件。
 設備名稱
 數量
 照片佐證
@@ -55,7 +54,7 @@ D5 服務滿意度調查: 休憩環境的舒適度是影響服務對象及家屬
 開啟機構內所有冷氣及暖氣設備，確認其功能（冷氣、暖氣、除濕）皆正常運作。
 確保遙控器或控制器易於取得與操作，且工作人員均熟悉使用方式。
 檢查設備清潔情況（如：濾網），並將其納入 C11 的定期維護紀錄中。
-製作佐證資料： 參考下方範例，說明休息場所的規劃並附上冷暖設備的功能證明。【舉例說明】您可以參考 C1.休憩設備設置-01佐證資料範例 的格式，建立如下的佐證內容：A. 適當休息場所本機構規劃有特定且舒適的區域作為主要休息場所，環境安靜、採光良好，並配置上述休憩設備，提供服務對象優質的午間休憩與日常靜養環境。
+製作佐證資料： 參考下方範例，說明休息場所的規劃並附上冷暖設備的功能證明。【舉例說明】A. 適當休息場所本機構規劃有特定且舒適的區域作為主要休息場所，環境安靜、採光良好，並配置上述休憩設備，提供服務對象優質的午間休憩與日常靜養環境。
 休息場所實景照片
 說明
 [休憩區集中管理實景照片]
@@ -74,9 +73,9 @@ D5 服務滿意度調查: 休憩環境的舒適度是影響服務對象及家屬
 設備主機安裝於戶外指定位置，符合安全規範，並定期進行維護保養，確保運作效能與安全。
 第五章：應檢附佐證資料列表
 為符合此指標，機構應於評鑑期間內，備妥以下書面佐證資料：
-《休憩設備清冊與法規符合性說明》：包含設備名稱、數量、照片及符合性說明。（參考 C1.休憩設備設置-01佐證資料範例）
-《適當休息場所與冷暖設備說明》：包含休息區實景照片及冷暖氣設備照片與功能說明。（參考 C1.休憩設備設置-01佐證資料範例）
-《設備定期維護及管理紀錄單》：需包含冷暖氣設備的定期清潔或保養紀錄。（參考 C11.器材維護與管理-01設備定期維護及管理紀錄單.md）
+《休憩設備清冊與法規符合性說明》：包含設備名稱、數量、照片及符合性說明。
+《適當休息場所與冷暖設備說明》：包含休息區實景照片及冷暖氣設備照片與功能說明。
+《設備定期維護及管理紀錄單》：需包含冷暖氣設備的定期清潔或保養紀錄。
 第六章：評鑑現場人員應對重點
 主要應對人員：
 業務負責人或行政主管： 應熟悉所有休憩設備的類型、數量、採購考量及法規依據。
