[自動同步] 更新檔案: D5.服務滿意度調查-02家屬服務滿意度調查問卷.md

--- a/D5.服務滿意度調查-02家屬服務滿意度調查問卷.md
+++ b/D5.服務滿意度調查-02家屬服務滿意度調查問卷.md
@@ -1,5 +1,4 @@
-日間照顧中心 家屬服務滿意度調查問卷 (範本)
-親愛的家屬，您好：
+日間照顧中心 家屬服務滿意度調查問卷 親愛的家屬，您好：
 為了給您與長輩提供更貼心、更優質的服務，我們誠摯地邀請您撥冗幾分鐘填寫這份問卷。您的每一份回饋都是我們進步的動力，能幫助我們持續優化服務。
 本問卷採匿名方式進行，所有資料將嚴格保密，僅供內部服務品質改善分析，請您安心填寫。感謝您的支持與協助！
 第一部分：服務內容與品質
