[自動同步] 更新檔案: D5.服務滿意度調查-01服務滿意度調查執行辦法.md

--- a/D5.服務滿意度調查-01服務滿意度調查執行辦法.md
+++ b/D5.服務滿意度調查-01服務滿意度調查執行辦法.md
@@ -1,4 +1,4 @@
-服務滿意度調查執行辦法 (範本)
+服務滿意度調查執行辦法 
 文件編號：B-010-02
 版本：2.0
 制定單位
@@ -13,13 +13,13 @@
 服務使用者（個案）：於本機構實際接受服務之長輩。
 家屬：經機構認定之個案主要照顧者或法律代理人。
 4. 權責
-主辦單位：社工組（或指定負責人），負責規劃、執行、分析及報告彙整。
-協辦單位：照服組、行政組，協助問卷發放、回收及改善措施之執行。
-核決層級：機構主任，負責審核本辦法、分析報告及改善計畫。
+主辦單位：專業人力，負責規劃、執行、分析及報告彙整。
+協辦單位：專業人力、照服員，協助問卷發放、回收及改善措施之執行。
+核決層級：業務負責人，負責審核本辦法、分析報告及改善計畫。
 5. 作業內容
 5.1 調查期程與對象
 頻率：每年至少執行一次。
-時間：固定於每年12月1日至12月31日執行。
+時間：固定於每年10月1日至10月31日執行。
 對象：服務滿三個月（含）以上之全體個案及其家屬。
 5.2 調查方式
 個案：考量個案身心狀況，採「一對一訪談法」。由機構安排之中立第三方（如：志工、實習生）進行訪談並協助填寫問卷，以確保結果之客觀性與真實性。
@@ -36,9 +36,9 @@
 5.4 資料分析與應用
 統計分析：針對量化數據，計算各題項之「滿意度百分比」與「平均分數」。
 質性分析：彙整所有開放式意見，進行主題分類與摘要。
-報告撰寫：於次年1月15日前，由主辦單位完成《年度服務滿意度調查分析報告》。
+報告撰寫：於當年11月15日前，由主辦單位完成《年度服務滿意度調查分析報告》。
 5.5 改善與追蹤
-檢討會議：機構主任應於次年1月底前召開「服務品質檢討會議」，依據分析報告研擬具體改善措施。
+檢討會議：機構主任應於當年12月底前召開「服務品質檢討會議」，依據分析報告研擬具體改善措施。
 行動計畫：會議決議事項應納入《服務品質改善追蹤計畫表》，明訂負責人與完成時限。
 定期追蹤：每季於機構主管會議中報告改善進度，並留存紀錄，直至改善完成。
 回饋與應用：調查結果與改善計畫應作為機構下一年度營運計畫及服務優化之重要依據。
@@ -48,5 +48,5 @@
 臺中市社區式長期照顧服務機構評鑑基準
 服務滿意度調查問卷（個案、家屬）
 7. 附件
-附件一：年度服務滿意度調查分析報告（範本）
-附件二：服務品質改善追蹤計畫表（範本）
+附件一：年度服務滿意度調查分析報告
+附件二：服務品質改善追蹤計畫表
