[自動同步] 更新檔案: C3.廚房及用餐環境、清潔衛生-00操作指引.md

--- a/C3.廚房及用餐環境、清潔衛生-00操作指引.md
+++ b/C3.廚房及用餐環境、清潔衛生-00操作指引.md
@@ -63,8 +63,8 @@ D5 服務滿意度調查: 乾淨的用餐環境與合適的餐具，會直接影
 執行與紀錄：
 每日定時紀錄： 每日應至少定時紀錄上、下午各一次，確實檢查並記錄溫度。
 使用紀錄表： 使用標準化的**「冰箱冷藏冷凍溫度紀錄表」**，確實填寫日期、時間、溫度、紀錄人簽名。
-異常處理： 當溫度超出標準值時，應立即調整設定並於「異常狀況描述與處理方式」欄中說明原因及處理措施（例如：調整溫度設定、通知維修），若持續異常應安排檢修，同時確認冰箱內儲存食物之安全。
-顧問叮嚀 (實務建議)：
+異常處理： 當溫度超出標準值時，應立即調整設定並於「異常狀況描述與處理方式」欄中說明原因及處理措施（例如：調整溫度設定、通知維修），若持續異常應安排檢修，同時確認冰箱內儲存食物之安全性。
+實務建議：
 考量設備限制： 一般家用冰箱的冷凍效能要長時間穩定維持在-18℃有其難度。
 減少冷凍品： 建議日照中心盡量減少非必要的冷凍庫存品，特別是在評鑑前夕，以減輕冰箱負荷。
 溫度計的策略性放置： 可將溫度計放置於靠近冷凍庫出風口的位置，該處溫度通常最低，有助於在評鑑委員查看當下，呈現出最接近標準的溫度。
@@ -73,10 +73,10 @@ D5 服務滿意度調查: 乾淨的用餐環境與合適的餐具，會直接影
 步驟三：餐具清潔與存放標準化 (對應基準 C3-3)
 清潔與殺菌： 餐具使用後應立即洗潔劑清洗，並透過烘碗機、洗碗機或煮沸等方式有效殺菌。
 存放管理：
-殺菌後的餐具應存放在有門的櫥櫃或烘碗機內，避免二次污染。
+殺菌後的餐具應存放在有門的櫥櫃或整理盒內，避免二次污染。
 存放櫃應保持乾燥、潔淨，且空間足夠，不可將餐具堆疊於流理台或開放空間。
 佐證資料準備：
-拍照存證： 拍攝烘碗機或有門的存放櫃內部，照片須能呈現餐具已清潔乾淨、擺放整齊，且存放空間乾燥潔淨。
+拍照存證： 拍攝有門的存放櫃或整理盒內部，照片須能呈現餐具已清潔乾淨、擺放整齊，且存放空間乾燥潔淨。
 步驟四：建立清潔消毒紀錄 (對應基準 C3-4)
 日常清潔與定期消毒：
 用餐區桌面於每次用餐後都必須擦拭乾淨；地板應每日清掃。
@@ -84,7 +84,7 @@ D5 服務滿意度調查: 乾淨的用餐環境與合適的餐具，會直接影
 執行與紀錄：
 確實執行清潔與消毒工作，並使用**「廚房及用餐環境定期清掃及消毒紀錄表」**進行記錄。
 在紀錄表中，應簡述使用的消毒劑比例，例如：「使用 1:100 稀釋漂白水擦拭」。
-顧問叮嚀 (實務建議)：
+實務建議：
 明確區分清潔與消毒： 為了讓紀錄一目了然，建議在紀錄表單的設計上，明確區分「清潔」與「消毒」兩項作業。
 表單設計建議： 可在表格中新增一欄「執行項目」，並提供「清潔」與「消毒」兩個選項供勾選。
 紀錄內容範例：
@@ -107,7 +107,7 @@ D5 服務滿意度調查: 乾淨的用餐環境與合適的餐具，會直接影
 廚房與用餐環境各項設備照片佐證檔案：包含貯藏櫃、冰箱、烹飪設備、配膳台、烘碗機、有門的餐具存放櫃等，照片需清晰並可搭配文字說明。
 特殊輔助餐具清單與照片：證明機構能依個案需求提供適切輔具。
 第六章：評鑑現場人員應對重點
-主要應對人員： 廚工、主要負責環境清潔的照服員、單位主管或業務負責人。
+主要應對人員： 主要負責環境清潔的照服員、單位主管或業務負責人。
 應答準備：
 廚工/照服員： 應能清楚說明冰箱溫度的標準、紀錄的頻率、餐具消毒的流程，以及環境消毒的頻率與方式。
 單位主管： 應熟悉所有流程與紀錄的管理機制。當委員詢問「若冰箱溫度異常，你們的處理流程是什麼？」時，應能依據紀錄表上的異常處理流程完整說明。
